# python

./: .gitignore  01_print_age.py  02_check_even_odd.py  03-chech_pos_neg_0.py  04_factorial_of_number.py  05_reversing_a_number.py  06_palindrome_number.py  07_fibonacci.py  08_list_numbers.py  09_even_odd_list.py  10_even_odd_list_no_func.py  11_modules.py  12_rename_files_pattern.py  13_automate_emails.py  list-to-do.md  readme.md  test.py
PYDANTIC/: pyproject.toml
Python For DevOps/: README.md
standard-coding/: PYTHON_ADDITIONAL_BEST_PRACTICES.md  python-standards.md
