[project]
name = "pydantic-project"
version = "1.0.0"
description = "Data validation and settings management using Python type annotations."
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = ["fastapi>=0.115.12", "uvicorn>=0.34.2", "pydantic>=2.12.3", "pydantic-settings>=2.9.1", "python-dotenv>=1.1.0"]